--- a/HTML/index.html
+++ b/HTML/index.html
@@ -59,7 +59,7 @@
 </header>
 
 
-<section>
+<section class="carouselBox">
 
     <div class="container">
 
@@ -251,199 +251,129 @@
 <section>
     <div class="container">
 
-        <div class="row">
+        <div class="row rowBox" >
 
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
-                <div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/heartLogo.png" alt="" width="30" height="30">
-                    </div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/sprechblase.png" alt="" width="35" height="35">
-                    </div>
-                    <div class="likeComment">
-                        <p>123 Likes</p>
-                    </div>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5087.jpg" alt="">
                 </a>
-                <div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/heartLogo.png" alt="" width="30" height="30">
-                    </div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/sprechblase.png" alt="" width="35" height="35">
-                    </div>
-                    <div class="likeComment">
-                        <p>123 Likes</p>
-                    </div>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12  thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12  thumb picBox">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5109.jpg" alt="">
                 </a>
-                <div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/heartLogo.png" alt="" width="30" height="30">
-                    </div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/sprechblase.png" alt="" width="35" height="35">
-                    </div>
-                    <div class="likeComment">
-                        <p>123 Likes</p>
-                    </div>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12  thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12  thumb picBox">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
-                <div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/heartLogo.png" alt="" width="30" height="30">
-                    </div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/sprechblase.png" alt="" width="35" height="35">
-                    </div>
-                    <div class="likeComment">
-                        <p>123 Likes</p>
-                    </div>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12  thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12  thumb picBox">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5087.jpg" alt="">
                 </a>
-                <div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/heartLogo.png" alt="" width="30" height="30">
-                    </div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/sprechblase.png" alt="" width="35" height="35">
-                    </div>
-                    <div class="likeComment">
-                        <p>123 Likes</p>
-                    </div>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5109.jpg" alt="">
                 </a>
-                <div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/heartLogo.png" alt="" width="30" height="30">
-                    </div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/sprechblase.png" alt="" width="35" height="35">
-                    </div>
-                    <div class="likeComment">
-                        <p>123 Likes</p>
-                    </div>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
+                <a  href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
-                <div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/heartLogo.png" alt="" width="30" height="30">
-                    </div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/sprechblase.png" alt="" width="35" height="35">
-                    </div>
-                    <div class="likeComment">
-                        <p>123 Likes</p>
-                    </div>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
                 </div>
 
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5087.jpg" alt="">
                 </a>
-                <div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/heartLogo.png" alt="" width="30" height="30">
-                    </div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/sprechblase.png" alt="" width="35" height="35">
-                    </div>
-                    <div class="likeComment">
-                        <p>123 Likes</p>
-                    </div>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5109.jpg" alt="">
                 </a>
-                <div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/heartLogo.png" alt="" width="30" height="30">
-                    </div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/sprechblase.png" alt="" width="35" height="35">
-                    </div>
-                    <div class="likeComment">
-                        <p>123 Likes</p>
-                    </div>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12  thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12  thumb picBox">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5059.jpg" alt="">
                 </a>
-                <div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/heartLogo.png" alt="" width="30" height="30">
-                    </div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/sprechblase.png" alt="" width="35" height="35">
-                    </div>
-                    <div class="likeComment">
-                        <p>123 Likes</p>
-                    </div>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
+
                 </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5087.jpg" alt="">
                 </a>
-                <div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/heartLogo.png" alt="" width="30" height="30">
-                    </div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/sprechblase.png" alt="" width="35" height="35">
-                    </div>
-                    <div class="likeComment">
-                        <p>123 Likes</p>
-                    </div>
+                <div class="likeAndCommentBox">
+
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb">
-                <a class="thumbnail" href="viewPicByClick.html">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 thumb picBox">
+                <a href="viewPicByClick.html">
                     <img class="img-responsive" src="../img/IMG_5109.jpg" alt="">
                 </a>
-                <div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/heartLogo.png" alt="" width="30" height="30">
-                    </div>
-                    <div class="likeComment">
-                        <img class="img-responsive" src="../img/sprechblase.png" alt="" width="35" height="35">
-                    </div>
-                    <div class="likeComment">
-                        <p>123 Likes</p>
-                    </div>
+                <div class="likeAndCommentBox">
+                    <span class="glyphicon glyphicon-thumbs-up"></span>
+                    <span class="glyphicon glyphicon-comment"></span>
+                    <p>123 Likes</p>
                 </div>
             </div>
         </div>
@@ -458,7 +388,7 @@
 
     <div class="navbar navbar-default nav-links navbar-static-bottom">
         <div id="footer-bottom" class="container">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav footer-nav">
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="impressum.html">Impressum</a></li>
 
