--- a/HTML/index.html
+++ b/HTML/index.html
@@ -62,42 +62,35 @@
 <section class="carouselBox">
 
     <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img  class="img-responsive"src="../img/carousel1.jpg" alt="First slide">
+                        </div>
+                        <div class="item">
+                            <img class="img-responsive src=" src="../img/carousel2.jpg" alt="Second slide">
 
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                <!-- Carousel indicators -->
-                <ol class="carousel-indicators">
-                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="1"></li>
-                    <li data-target="#myCarousel" data-slide-to="2"></li>
-                </ol>
-                <!-- Wrapper for carousel items -->
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img class="img-fluid img-responsive" src="../img/IMG_5059.jpg" alt="sneaker" width="800"
-                             height="345">
+                        </div>
+                        <div class="item">
+                            <img class="img-responsive" src="../img/carousel3.jpg" alt="Third slide">
+
+                        </div>
                     </div>
-                    <div class="item">
-                        <img class="img-fluid img-responsive" src="../img/IMG_5087.jpg" alt="sneaker" width="800"
-                             height="345">
-                    </div>
-                    <div class="item">
-                        <img class="img-fluid img-responsive" src="../img/IMG_5109.jpg" alt="sneaker" width="800"
-                             height="">
-                    </div>
+                    <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span></a><a class="right carousel-control"
+                                                                                     href="#carousel-example-generic" data-slide="next"><span class="glyphicon glyphicon-chevron-right">
+                        </span></a>
                 </div>
-                <!-- Carousel controls -->
-                <a class="carousel-control left" href="#myCarousel" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
-                </a>
-                <a class="carousel-control right" href="#myCarousel" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
-                </a>
+
             </div>
         </div>
-
-
-    </div>
 
 
 </section>
