--- a/HTML/test.html
+++ b/HTML/test.html
@@ -31,7 +31,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-xs-12">
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -40,31 +40,15 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img  class="img-responsive"src="../img/IMG_5059.JPG" alt="First slide">
-                        <div class="carousel-caption">
-                            <h3>
-                            </h3>
-                            <p>
-                            </p>
-                        </div>
+                        <img  class="img-responsive"src="../img/carousel1.jpg" alt="First slide">
                     </div>
                     <div class="item">
-                        <img class="img-responsive src="../img/IMG_5059.JPG" alt="Second slide">
-                        <div class="carousel-caption">
-                            <h3>
-                            </h3>
-                            <p>
-                            </p>
-                        </div>
+                        <img class="img-responsive src=" src="../img/carousel2.jpg" alt="Second slide">
+
                     </div>
                     <div class="item">
-                        <img class="img-responsive src="../img/IMG_5059.JPG" alt="Third slide">
-                        <div class="carousel-caption">
-                            <h3>
-                            </h3>
-                            <p>
-                            </p>
-                        </div>
+                        <img class="img-responsive" src="../img/carousel3.jpg" alt="Third slide">
+
                     </div>
                 </div>
                 <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
@@ -72,22 +56,10 @@
                                                                                  href="#carousel-example-generic" data-slide="next"><span class="glyphicon glyphicon-chevron-right">
                         </span></a>
             </div>
-            <div class="main-text hidden-xs">
-                <div class="col-md-12 text-center">
-                    <h1>
-                    </h1>
-                    <h3>
 
-                    </h3>
-                    <div class="">
-
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
-    <div id="push">
-    </div>
+
 
 </body>
 </html>
